Fix SCSS spacing, heading resets, and layout refinements

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -227,7 +227,7 @@ body.nds-minimal[style*="--bg-img"] {
         }
     }
 
-    :is(p, ul, ol, .nds-content-block, .nds-table-wrapper, .nds-table, .nds-tabs, .nds-code) {
+    :is(p, ul, ol, .nds-table-wrapper, .nds-table, .nds-tabs, .nds-code,.nds-definition-list) {
         margin-block-end: 1rem;
 
         &:last-child {
@@ -272,6 +272,19 @@ body.nds-minimal[style*="--bg-img"] {
         line-height: var(--_block-title-LH);
         font-weight: var(--_block-title-FW);
         color: var(--_block-title-color);
+        margin-block-end: 0.5rem;
+
+        &:last-child {
+            margin-block-end: 0;
+        }
+    }
+
+    :is(.nds-content-block) {
+        margin-block-end: 2rem;
+
+        &:last-child {
+            margin-block-end: 0;
+        }
     }
 }
 
